Updated dev dependencies

--- a/package.json
+++ b/package.json
@@ -54,6 +54,15 @@
     "vinyl-source-stream": "^2.0.0"
   },
   "browserify": {
-    "transform": [["babelify", { "presets": ["@babel/preset-env"] }]]
+    "transform": [
+      [
+        "babelify",
+        {
+          "presets": [
+            "@babel/preset-env"
+          ]
+        }
+      ]
+    ]
   }
 }
