--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: node_js
 node_js:
-  - node
-cache: yarn
+  - 12
 install:
+  - yarn
   - npm install -g codecov
 after_success:
   - codecov
